<resources>
    <string name="app_name">Balancefy</string>
    <string name="ou">OU</string>
    <string name="login_with_email">Entrar com Email</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="in_development">Em desenvolvimento…</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="reminde_me">Lembre-me</string>
    <string name="next">Continuar</string>
    <string name="already_has_account">Já tenho conta</string>
    <string name="create_account_button">Criar Conta</string>
    <string name="welcome">Bem Vindo</string>
    <string name="create_account_title">Crie uma Conta</string>
    <string name="create_account_subtitle">Crie sua conta, cadastra suas metas!</string>
    <string name="name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="confirm_password">Confirmar Senha</string>
    <string name="birth_date">Data de Nascimento</string>
    <string name="incoming">Renda</string>
    <string name="end">Finalizar</string>
    <string name="agreement">Eu concordo com os</string>
    <string name="interests">Interesses</string>
    <string name="interests_subtitle">Selecione pelo menos 3 temas de seu interesse</string>
    <string name="interests_travel">Viagem</string>
    <string name="interests_retirement">Aposentadoria</string>
    <string name="interests_investments">Investimentos</string>
    <string name="interests_properties">Imóveis</string>
    <string name="interests_exchange">Intercâmbio</string>
    <string name="interests_vehicles">Veículos</string>
    <string name="personal_information">Informações Pessoais</string>
    <string name="terms_title">Termos e Condições</string>
    <string name="disagree">Eu discordo</string>
    <string name="agree">Eu concordo</string>
    <string name="terms_text">Concordo em compartilhar minha imagem, nome e pontos de experiências na comunidade</string>
    <string name="error_message_date">Data não pode ser vazia</string>
    <string name="error_terms">Aceite os termos e condições para continuar</string>
    <string name="error_empty_field">Campo não pode ser vazio</string>
    <string name="error_different_pass">Senhas devem ser iguais</string>
    <string name="select_date">Selecione data</string>
    <string name="register_error">Falha ao cadastrar. Tente novamente mais tarde!</string>
    <string name="password_requirments">- Mínimo de 6 caracteres\n- Mínimo de um caractere especial\n- Mínimo de uma letra maiúscula\n- Mínimo de uma letra minúscula</string>
    <string name="password_requirments_title">Restrições de Senha</string>
    <string name="error_invalid_pass">Senha não atende os requisitos</string>
    <string name="error_invalid_field">Campo inválido</string>
    <string name="error_less_interests">Selecione ao menos 3 interesses</string>
    <string name="profile_under_analysis">Perfil: Em Análise…</string>
    <string name="profile_setting">profile_setting</string>
    <string name="user_name">Nome Usuario</string>
    <string name="background_user_image">imagem de fundo do usuario</string>
    <string name="background_avatar_image">imagem de perfil do usuario</string>
    <string name="money">R$</string>
    <string name="description_home">Home</string>
    <string name="description_forum">Forum</string>
    <string name="description_goal">Objetivo</string>
    <string name="description_rank">Rank</string>
    <string name="description_profile">Perfil</string>
    <string name="no_posts">Não há postagens no momento</string>
    <string name="last_transaction">Últimas Movimentações</string>
    <string name="user_logout">user_logout</string>
    <string name="icon_menu">icon menu</string>
    <string name="icon_transaction">icon_transcation</string>
    <string name="icon_comment">icon_comment</string>
    <string name="icon_goal">icon_goal</string>
    <string name="greetings">Bom dia, </string>
    <string name="description_current_balance">Saldo atual em conta</string>
    <string name="description_total_incoming">Valor total de receita</string>
    <string name="description_amount_expenses">Valor atual de despesas</string>
    <string name="password_requirments_value">*</string>
    <string name="onboarding_start">Arraste para começar</string>
    <string name="onboarding_title1">Controle suas despesas e receitas</string>
    <string name="onboarding_first_text1">Acompanhe todos os seus gastos \n e seus ganhos no App</string>
    <string name="onboarding_second_text1">Todos os seus gastos com descrição e \n informações detalhadas de cada transação</string>
    <string name="onboarding_title2">Planeje seus \n Objetivos e Metas</string>
    <string name="onboarding_first_text2">Gerencie suas metas e objetivos \n por etapas</string>
    <string name="onboarding_title3">Compartilhe suas ideias \n com outros usuários</string>
    <string name="onboarding_first_text3">Adicione comentários e tópicos \n para compartilhar sua experiência \n com outros usuários</string>
    <string name="onboarding_start_button">Começar</string>
    <string name="description_image_onboarding">Exemplo de Objetivo</string>
    <string name="personal_information_subtitle">Conte-nos um pouco mais sobre você</string>
    <string name="dot">.</string>
    <string name="active_goal">Ativo</string>
    <string name="done_goal">Finalizado</string>
    <string name="create_goal">Criar Objetivo</string>
    <string name="description">Descrição</string>
    <string name="estimated_date">Data de Conclusão</string>
    <string name="goal_value">Valor Total</string>
    <string name="goal_initial_value">Valor Inicial</string>
    <string name="goal_category">Categoria</string>
    <string name="income">Entrada</string>
    <string name="spending">Saída</string>
    <string name="transaction_category_leisure">Lazer</string>
    <string name="transaction_category_emergency">Emergência</string>
    <string name="transaction_category_goal">Objetivo</string>
    <string name="transaction_category_salary">Salário</string>
    <string name="transaction_category_profit">Benefício</string>
    <string name="goal_category_internacional_trip">Viagem Internacional</string>
    <string name="goal_category_nacional_trip">Viagem Nacional</string>
    <string name="goal_category_purchase_house">Comprar Casa Própria</string>
    <string name="goal_category_purchase_car">Comprar carro</string>
    <string name="goal_category_college">Faculdade</string>
    <string name="goal_category_debt_discharge">Quitação de Dívida</string>
    <string name="goal_category_general_purchases">Compras Gerais</string>
    <string name="connection_error">Erro de Conexão</string>
    <string name="no_goal">Não há objetivos no momento</string>
    <string name="created_goal">Objetivo Criado!</string>
    <string name="estimated_date_title">Data Estimada:</string>
    <string name="invalid_login">Senha ou Email inválidos</string>
    <string name="zero_score">0xp</string>
    <string name="remaining_days">dias restante</string>
    <string name="transaction">"Transação "</string>
    <string name="general">Geral</string>
    <string name="for_you">Recomendados</string>
    <string name="current_goal_title">Objetivo Atual</string>
    <string name="next_steps">Próximos passos</string>
    <string name="conclude">Concluir</string>
    <string name="add_transaction">Adicionar Transação</string>
    <string name="transaction_amount">Valor da transação</string>
    <string name="created_transaction">Transação Criada!</string>
    <string name="error_transaction_type">Tipo de transação não pode estar vazio</string>
    <string name="error_empty_value">Insira um valor acima de 0</string>
    <string name="title">Título</string>
    <string name="publish">Publicar</string>
    <string name="created_post">Tópico criado!</string>
    <string name="no_transactions">Não há transações no momento</string>
    <string name="error_complete_task">Erro ao completar, tente novamente!</string>
    <string name="complete_task">Task finalizada!</string>
    <string name="no_tasks">Suas tarefas já foram concluídas!</string>
    <string name="score_suffix" translatable="false">xp</string>
    <string name="score_prefix" translatable="false">+</string>
    <string name="background_avatar_image_post" >Imagem de Fundo do Avatar</string>
    <string name="profile_editable_icon">Ícone editável de perfil</string>
    <string name="name_of_the_one_who_created_the_post" translatable="false">Name of the one who created the post</string>
    <string name="titulo_aleatorio">Titulo aleatorio</string>
    <string name="texto_aleatorio">Texto aleatorio</string>
    <string name="comment_icon" translatable="false">comment icon</string>
    <string name="dicas">Dicas</string>
    <string name="default_post_value" translatable="false">11</string>
    <string name="icon_post_likes" translatable="false">icon post likes</string>
    <string name="confirm">Confirmar</string>
    <string name="insert_your_name">Insira seu Nome...</string>
    <string name="insert_your_email">Insira seu Email</string>
    <string name="email_name_changed">Email e Nome alterado com Sucesso</string>
    <string name="like_action">Curtir</string>
    <string name="no_comments_reply" translatable="false">Não há comentários nesta publicação</string>
    <string name="you_position">Sua posição</string>
</resources>