<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_home"
        android:title="@string/description_home"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/forum_fragment"
        android:icon="@drawable/ic_forum"
        android:title="@string/description_forum"
        app:showAsAction="always" />
    <item
        android:id="@+id/goal_fragment"
        android:icon="@drawable/ic_goal"
        android:title="@string/description_goal"
        app:showAsAction="always" />
    <item
        android:id="@+id/rank_fragment"
        android:icon="@drawable/ic_rank"
        android:title="@string/description_rank"
        app:showAsAction="always"/>
</menu>