<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_balancefy"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="40dp"
    tools:context=".activities.RegisterStep2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_information"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textColor="@color/green_balancefy"
            android:textSize="25sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_sub_title"
        android:textColor="@color/white"
        android:alpha="0.4"
        android:textSize="12sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birth_date"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_birth_date"
        android:layout_marginTop="10dp"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:strokeColor="@color/grey"
        app:cornerRadius="5dp"
        android:text="@string/select_date"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:prefixText="@string/money"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/incoming"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_incoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/white">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interests"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interests_subtitle"
            android:textColor="@color/white"
            android:alpha="0.4"
            android:textSize="12sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_travel"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/interests_travel"
                app:strokeColor="@color/grey"
                app:cornerRadius="5dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_retirement"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:strokeColor="@color/grey"
                android:text="@string/interests_retirement"
                app:cornerRadius="5dp"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_investments"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:strokeColor="@color/grey"
                android:text="@string/interests_investments"
                app:cornerRadius="5dp"
                android:layout_weight="3"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_properties"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:strokeColor="@color/grey"
                android:text="@string/interests_properties"
                app:cornerRadius="5dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_exchange"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:strokeColor="@color/grey"
                android:text="@string/interests_exchange"
                app:cornerRadius="5dp"
                android:layout_weight="2"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_vehicles"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:strokeColor="@color/grey"
                android:text="@string/interests_vehicles"
                app:cornerRadius="5dp"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tv_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_title"
            android:textColor="@color/green_balancefy"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_end"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/end"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:cornerRadius="15dp" />

</LinearLayout>