<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_creation_dialog"
    android:padding="33dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:prefixText="@string/money"
            android:hint="@string/goal_initial_value"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_goal_initial_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/white">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:prefixText="@string/money"
            android:hint="@string/goal_value"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_goal_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/white">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estimated_date"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/btn_estimated_date"
            android:layout_marginTop="10dp"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:strokeColor="@color/grey"
            app:cornerRadius="5dp"
            android:text="@string/select_date"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/goal_category"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:textColorHint="@color/white">

            <AutoCompleteTextView
                android:id="@+id/goal_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/white"
                app:simpleItems="@array/category_items"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/create_goal"
            android:textAllCaps="false"
            app:cornerRadius="10dp"/>

    </LinearLayout>

</ScrollView>