<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_balancefy"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="40dp"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textColor="@color/green_balancefy"
            android:textSize="25sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_subtitle"
        android:textColor="@color/white"
        android:alpha="0.4"
        android:textSize="12sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/name"
            android:textColorHint="@color/white"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/last_name"
            android:textColorHint="@color/white"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/white">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_attention"
        app:endIconContentDescription="@string/password_requirments_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp"
        android:inputType="textPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:cornerRadius="15dp"
        android:text="@string/next"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/ou"
            android:textColor="@color/white"
            android:textFontWeight="900"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/bt_facebook"
            style="@style/BottomSheetStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/bt_black_white"
            android:backgroundTint="@null"
            android:drawableLeft="@drawable/ic_facebook"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/facebook"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bt_google"
            style="@style/BottomSheetStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/bt_black_white"
            android:drawableLeft="@drawable/ic_google"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/google"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>