<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_dialog"
    android:padding="33dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_text"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_disagree"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="15dp"
                android:text="@string/disagree" />

            <Button
                android:id="@+id/btn_agree"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:text="@string/agree"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>





</ScrollView>